add styles and base js

--- a/index.html
+++ b/index.html
@@ -6,11 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>Football equip brands ratings</title>
 </head>
 <body>
     <div class="wrapper">
-        <div class="container">
+        <div class="container mt-5">
+            <div class="form-group">
+                <select id="boots-select" class="form-control custom-select">
+                    <option value="0" disabled selected>Select futsal boots</option>
+                    <option value="Adidas">ADIDAS COPA TANGO 18.3 TOPSALA FUTSAL BOOT</option>
+                    <option value="Nike">NIKE TIEMPO PREMIER II SALA FUTSAL BOOT</option>
+                    <option value="Munich">MUNICH CONTINENTAL FUTSAL BOOT</option>
+                    <option value="Mizuno">MIZUNO SALA PREMIUM 3 IN FUTSAL BOOT</option>
+                    <option value="Joma">JOMA TOP FLEX FUTSAL BOOT</option>
+                    <option value="Umbro">UMBRO CHALEIRA PRO IC FUTSAL BOOT</option>
+                </select>
+            </div>
             <table class="table table-striped">
                 <thead>
                     <tr>
