--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                     <option value="Umbro">UMBRO CHALEIRA PRO IC FUTSAL BOOT</option>
                 </select>
             </div>
+            <div class="form-group">
+                <input type="number" id="rating-control" class="form-control" step="0.1" max="5" placeholder="Rate 1 - 5" disabled>
+            </div>
             <table class="table table-striped">
                 <thead>
                     <tr>
